Fixed font size on Firefox 31. Re #90.                Version changed

--- a/src/data/styles/style.css
+++ b/src/data/styles/style.css
@@ -16,6 +16,7 @@ body {
     overflow-x: hidden;
     display: inline-block;
     background-color: white;
+    font-size: 16px;
 }
 
 .button {
